api/src/snapshots/api__test__activity_generate.snap
---
source: api/src/lib.rs
expression: api.1

---
- namespaces:
    "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea":
      id: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      uuid: 5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea
      name: testns
  agents: {}
  activities:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#activity:testactivity"
    : id: "http://blockchaintp.com/chronicle/ns#activity:testactivity"
      namespaceid: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      name: testactivity
      domaintypeid: "http://blockchaintp.com/chronicle/ns#domaintype:testtype"
      started: ~
      ended: ~
  entities: {}
  was_associated_with: {}
  was_attributed_to: {}
  was_generated_by: {}
  used: {}
- namespaces:
    "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea":
      id: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      uuid: 5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea
      name: testns
  agents: {}
  activities:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#activity:testactivity"
    : id: "http://blockchaintp.com/chronicle/ns#activity:testactivity"
      namespaceid: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      name: testactivity
      domaintypeid: ~
      started: ~
      ended: ~
  entities:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#entity:testactivity"
    : Unsigned:
        id: "http://blockchaintp.com/chronicle/ns#entity:testactivity"
        namespaceid: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
        name: testactivity
        domaintypeid: "http://blockchaintp.com/chronicle/ns#domaintype:testtype"
  was_associated_with: {}
  was_attributed_to: {}
  was_generated_by:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#entity:testactivity"
    : - - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
        - "http://blockchaintp.com/chronicle/ns#activity:testactivity"
  used: {}
- namespaces:
    "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea":
      id: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      uuid: 5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea
      name: testns
  agents: {}
  activities:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#activity:testactivity"
    : id: "http://blockchaintp.com/chronicle/ns#activity:testactivity"
      namespaceid: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      name: testactivity
      domaintypeid: ~
      started: ~
      ended: ~
  entities:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#entity:testactivity_1"
    : Unsigned:
        id: "http://blockchaintp.com/chronicle/ns#entity:testactivity_1"
        namespaceid: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
        name: testactivity_1
        domaintypeid: "http://blockchaintp.com/chronicle/ns#domaintype:testtype"
  was_associated_with: {}
  was_attributed_to: {}
  was_generated_by:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#entity:testactivity_1"
    : - - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
        - "http://blockchaintp.com/chronicle/ns#activity:testactivity"
  used: {}

