api/src/snapshots/api__test__activity_use.snap
---
source: api/src/lib.rs
expression: dump_ledger_state(api)

---
[
  {
    "namespace": "chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea",
    "resource": "chronicle:entity:testactivity_0"
  },
  "{\"@id\":\"chronicle:entity:testactivity_0\",\"@type\":\"prov:Entity\",\"label\":\"testactivity_0\",\"namespace\":\"chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea\"}",
  {
    "namespace": "null",
    "resource": "chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
  },
  "{\"@id\":\"chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea\",\"@type\":\"chronicle:Namespace\",\"label\":\"testns\"}",
  {
    "namespace": "chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea",
    "resource": "chronicle:activity:testactivity_0"
  },
  "{\"@id\":\"chronicle:activity:testactivity_0\",\"@type\":\"prov:Activity\",\"used\":[\"chronicle:entity:testactivity_0\"],\"namespace\":\"chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea\",\"label\":\"testactivity_0\"}"
]
