api/src/snapshots/api__test__agent_public_key.snap
---
source: api/src/lib.rs
expression: api.1

---
- namespaces:
    "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea":
      id: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      uuid: 5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea
      name: testns
  agents: {}
  activities: {}
  entities: {}
  was_associated_with: {}
  was_attributed_to: {}
  was_generated_by: {}
  used: {}
- namespaces:
    "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea":
      id: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      uuid: 5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea
      name: testns
  agents:
    ? - "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      - "http://blockchaintp.com/chronicle/ns#agent:testagent"
    : id: "http://blockchaintp.com/chronicle/ns#agent:testagent"
      namespaceid: "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
      name: testagent
      domaintypeid: ~
      publickey: 03c4c663d96ec83af004ba21839cebcefedadde8b3905fbeaf9bb3f4fb3b9a13fe
  activities: {}
  entities: {}
  was_associated_with: {}
  was_attributed_to: {}
  was_generated_by: {}
  used: {}

