api/src/snapshots/api__test__create_activity.snap
---
source: api/src/lib.rs
expression: prov.to_json().0.pretty(3)

---
[
   {
      "@id": "http://blockchaintp.com/chonicle/ns#:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea",
      "@type": "http://blockchaintp.com/chonicle/ns#Namespace",
      "http://www.w3.org/2000/01/rdf-schema#label": [
         {
            "@value": "testns"
         }
      ]
   },
   {
      "@id": "http://blockchaintp.com/chonicle/ns#:activity:testactivity_0",
      "@type": "http://www.w3.org/ns/prov#Activity",
      "http://www.w3.org/2000/01/rdf-schema#label": [
         {
            "@value": "testactivity_0"
         }
      ],
      "http://blockchaintp.com/chonicle/ns#hasNamespace": [
         {
            "@id": "http://blockchaintp.com/chonicle/ns#:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
         }
      ]
   }
]
