api/src/snapshots/api__test__end_activity.snap
---
source: api/src/lib.rs
expression: dump_graph(&api)

---
[
   {
      "@id": "http://blockchaintp.com/chronicle/ns#agent:testagent_0",
      "@type": "http://www.w3.org/ns/prov#Agent",
      "http://www.w3.org/2000/01/rdf-schema#label": [
         {
            "@value": "testagent_0"
         }
      ],
      "http://blockchaintp.com/chronicle/ns#hasNamespace": [
         {
            "@id": "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
         }
      ]
   },
   {
      "@id": "http://blockchaintp.com/chronicle/ns#activity:testactivity_0",
      "@type": "http://www.w3.org/ns/prov#Activity",
      "http://www.w3.org/2000/01/rdf-schema#label": [
         {
            "@value": "testactivity_0"
         }
      ],
      "http://www.w3.org/ns/prov#startedAtTime": [
         {
            "@value": "2014-07-08T09:10:11+00:00"
         }
      ],
      "http://www.w3.org/ns/prov#wasAssociatedWith": [
         {
            "@id": "http://blockchaintp.com/chronicle/ns#agent:testagent_0"
         }
      ],
      "http://blockchaintp.com/chronicle/ns#hasNamespace": [
         {
            "@id": "http://blockchaintp.com/chronicle/ns#ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea"
         }
      ]
   }
]
